# SKIE-Universe

./: .gitattributes  .gitignore  .pre-commit-config.yaml  BEST_OOS.md  CHANGELOG.md  CLAUDE.md  README.md  hypothesis_backlog.md  pyproject.toml
.githooks/: pre-push
config/: cell_i_sources.yaml  data_sources.yaml  gate.yaml  instruments.yaml  macro_indicators.yaml  model_registry.yaml  shared_data.yaml
docs/: glossary.md
plan/: README.md  h053_buildout_2026-04-28.md  h053_stage3_v3_plan_2026-05-03.md  h055_successor_tree_2026-05-06.md  hypothesis_backlog.md  implementation-plan_2026-04-15.md  phases.md  tier2b_buildout_2026-04-23.md
runs/: .gitkeep
scripts/: __init__.py  analyze_h053_v3_arm2_performance.py  bootstrap_env.py  calibrate_bocd_live_priors.py  databento_extract_2026_h1.py  databento_extract_es_nq_pre_2020.py  databento_metals_energy_cost_dossier.py  diagnose_h053_v3_es_arm2_calibration.py  emit_adr_0017_v2_dashboard.py  hypothesis_new.py  ingest.py  run_cross_arm_concentration_analysis.py  run_h052a_walk_forward.py  run_h053_stage0_hks_sanity.py  run_h053_stage1_mediator_only.py  run_h053_stage2_multitf_mediation.py  run_h053_stage3_full.py  run_h053_stage3_v2.py  run_h053_stage3_v3.py  run_h053_stage3_v4.py  run_h054_walk_forward.py  run_h055_adherence_audit.py  run_h055_calibration_holdout.py  run_h055_spa_power_simulation.py  run_h055_v2_sweep.py  run_h055_walk_forward.py  run_h060_2026_q1q2.py  run_h060_walk_forward.py  run_h062_aggressive_sizing_sweep.py  run_h062_c3_2026_q1q2.py  run_h062_c9_2026_q1q2.py  run_h062_c9_bocd_step_up.py  run_h062_c9_km_era_decomposition.py  run_h062_c9_km_floor_sweep.py  run_h062_calibration_holdout.py  run_h062_spa_power_simulation.py  run_h062_v1_2026_q1q2.py  (+13 more)
(+611 files in other folders)
