[project]
name = "skie-universe"
version = "0.0.1"
description = "Intraday ES/NQ futures research and execution on NinjaTrader."
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.2",
    "polars>=1.0",
    "pyarrow>=16",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "statsmodels>=0.14",
    "arch>=7.0",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "torch>=2.3",
    "transformers>=4.42",
    "sentence-transformers>=3.0",
    "tiktoken>=0.7",
    "httpx>=0.27",
    "websockets>=12",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "pandas-market-calendars>=4.4",  # CME_Equity holiday calendar (P0-3 clock)
    "tqdm>=4.66",
    "rich>=13.7",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.2",
    "pytest-xdist>=3.6",
    "hypothesis>=6.100",
    "nbstripout>=0.7",
    "nbqa>=1.8",
    "ipykernel>=6.29",
    "jupyterlab>=4.2",
    "pandera[polars]>=0.20",
    "psutil>=5.9,<7",       # supervised_run.py telemetry (ADR-0010 Layer 4); upper bound per Round-2 R-9 — psutil 6.x has cross-platform process-introspection breakage history
]
phase2 = [
    "tick>=0.7",            # Hawkes process — no cp311 wheel as of 2026-04; defer to Phase-2
]
live = [
    "mcp>=0.9",             # MCP SDK for LLM-driven execution
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "SIM", "PL"]
ignore = ["PLR0913"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
    "integration: marks tests that hit the network or external services",
]
